--- a/.github/workflows/netlify-deploy.yml
+++ b/.github/workflows/netlify-deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 10
+          version: 9
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -29,7 +29,7 @@ jobs:
         run: pnpm build
 
       - name: Deploy to Netlify (production)
-        uses: netlify/actions/cli@master
+        uses: netlify/actions/cli@v2
         with:
           args: deploy --prod --dir=dist/spa --functions=netlify/functions --message "GitHub Actions deploy"
         env:
