--- a/.github/workflows/netlify-deploy.yml
+++ b/.github/workflows/netlify-deploy.yml
@@ -33,11 +33,12 @@ jobs:
         run: pnpm build
 
       - name: Deploy to Netlify (production)
-        uses: netlify/actions/cli@v2
+        uses: nwtgck/actions-netlify@v3
         with:
           args: deploy --prod --dir=dist/spa --functions=netlify/functions --message "GitHub Actions deploy"
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+
 
 
